# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = pysaleryd
description = Python library for controlling Saleryd HRV system
author = Björn Dalfors
author_email = bj00rn@users.noreply.github.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/bj00rn/pysaleryd/
# Add here related links, for example:
project_urls =
    Documentation = https://bj00rn.github.io/pysaleryd/
    Source = https://github.com/pyscaffold/pyscaffold/
    Changelog = https://bj00rn.github.io/pysaleryd/changelog.html
    Tracker = https://bj00rn.github.io/pysaleryd/issues
    Download = https://pypi.org/project/pysaleryd/#files


# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.11

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.11"
    websockets>=14.1,<15


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install pysaleryd[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    pytest-asyncio
    pytest-mock
    pytest-aiohttp
    pytest-timeout
    mock
    mypy

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = pysaleryd.module:function
# For example:
# console_scripts =
#    pysaleryd = pysaleryd.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# log_cli_level = debug
# log_cli = True
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
# asyncio_mode = auto
# asyncio_default_fixture_loop_scope = session
addopts =
    --cov pysaleryd --cov-report term-missing
    --verbose --timeout 30
norecursedirs =
    dist
    build
    .tox
    tests/utils
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.5
package = pysaleryd
extensions =
    github_actions
    pre_commit
